# Development

./: .gitignore
FH/Matlab/ALG5/: PAM.m
FH/Matlab/MOS/: EvolutionStrategy.m  MOS2_UE04.slx  MOS2_UE04.slx.r2021b  MOS2_UE05.slx  MOS2_UE2.asv  MOS2_UE2.m  Mars_Rover.slx  Mars_Rover.slx.r2021b  Mars_Rover_Params.slx  Mars_Rover_Params.slx.r2021b  Simulink_Tutorial.slx  Simulink_resonator.slx  UE03_1d.slx  UE03_b_2.slx  adrenaline.m  apply_es.m  eval_solution.m  get_quality.m  init.m  logisticgrowth.m  moon_scripter.m  mutate.m  predatorprey.asv  predatorprey.m
FH/Python/BA/: GeneticAlgorithm.py  ProteinStructureCreator.py  ProteinStructureEvaluator.py  ProteinStructureOperator.py  ProteinStructureSolution.py  main.py
FH/Python/CO2/: CO2_Pritz_UE2-8.ipynb
FH/Python/DAQ/: Exercise_4_NumPy.ipynb  Lecture_Notes_NumPy.ipynb
FH/Python/GeneScraper/: GeneScraper.py
FH/Python/Privat/: main.py
FH/Python/Thesis copy/: GeneticAlgorithm.py  ProteinStructureCreator.py  ProteinStructureOperator.py  Superimposer.py  main.py  (+7 more)
FH/Tutorium/UE02/SWE3_Steininger_Ue02/External-Mergesort/: CMakeLists.txt  merge_sorter.h  test_file_maniuplator.h  test_merge_sorter.cpp
FH/Tutorium/UE02/SWE3_Steininger_Ue02/External-Mergesort/Project1/: Project1.sln
FH/Tutorium/UE02/SWE3_Steininger_Ue02/External-Mergesort/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters
FH/Tutorium/UE02/SWE3_Steininger_Ue02/External-Mergesort/test_files/file_manipulator/partitioning/: partition_me.txt
FH/Tutorium/UE02/SWE3_Steininger_Ue02/External-Mergesort/test_files/merge_sorter/: unsorted.txt
(+2237 files in other folders)
